Fix text overflow problem :D

--- a/frontend/src/components/LessonIndexItem/LessonIndexItem.css
+++ b/frontend/src/components/LessonIndexItem/LessonIndexItem.css
@@ -2,19 +2,18 @@
   font-size: 1em;
   line-height: 1.5;
   letter-spacing: 0;
-  width: 790px;
+  min-width: 217px;
+  max-width: 790px;
   height: 112px;
   padding: 16px;
   display: flex;
   flex-direction: row;
-  --vh: 8.87px;
-  
+  --vh: 8.87px; 
 }
 
 .lessonIdxItmRow:not(:first-child) {
   border-top: 1px solid #e7e7e7;
 }
-
 
 
 .lessonIdxItmImgCol {
@@ -24,7 +23,8 @@
 }
 
 .lessonIdxItminfoCol {
-  width: 240px;
+  min-width: 161px;
+  max-width: 240px;
   height: 112px;
   margin-right: 16px;
   padding: 10px 0px 6px;
@@ -32,7 +32,6 @@
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 0%;
-  
   display: block;
   --vh: 8.4px;
   font-size: 1em;
@@ -42,7 +41,8 @@
 }
 
 .lessonIdxitmrightCol {
-  width: 333px;
+  min-width: 161px;
+  max-width: 333px;
   height: 100px;
   padding-top: 12px;
   padding-left: 16px;
@@ -57,7 +57,8 @@
 }
 
 .lessonIdxItmLessonType {
-  width: 240px;
+  min-width: 161px;
+  max-width: 240px;
   height: 16px;
   font-size: 0.75rem;
   font-weight: 700;
@@ -71,7 +72,8 @@
   font-size: .875rem;
   line-height: 1;
   font-weight: 400;
-  width: 240px;
+  min-width: 161px;
+  max-width: 240px;
   height: 14px;
 }
 
@@ -83,13 +85,15 @@
   line-height: 1.5;
   --vh: 4.4px;
   font-weight: 500;
-  width: 240px;
+  min-width: 161px;
+  max-width: 240px;
   height: 16px;
   text-overflow: ellipsis;
 }
 
 .lessonIdxItmRating{
-  width: 240px;
+  min-width: 161px;
+  max-width: 240px;
   height: 24px;
 }
 
@@ -103,7 +107,8 @@
 .lessonIdxItmDesc {
   display: block;
   text-overflow: ellipsis;
-  width: 333px;
+  min-width: 161px;
+  max-width: 333px;
   height: 80px;
 }
 
